--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.36.1",
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
