add endpoints for apis

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-"API_BINANCE" = "https://api.binance.com/api/v3/klines?symbol"
 
-# import 'dotenv/config'
+VITE_API_BINANCE="https://api.binance.com/api/v3/klines"
